Added e2e tests for weather route

--- a/src/app/features/weather/weather.component.html
+++ b/src/app/features/weather/weather.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="weatherInfo; else noInfo">
   <h2>{{ weatherInfo.place }}</h2>
 
-  <table aria-label="Weather">
+  <table aria-label="Weather" id="weatherInfo">
     <tr>
       <th>Field</th>
       <th>Value</th>
